--- a/contact_me.html
+++ b/contact_me.html
@@ -148,12 +148,12 @@
     <main class="contact_me fade-in">
         <div class="container-fluid h-100">
             <div class="row show-large h-100">
-                <div class="offset-1 col-4 info d-flex align-items-center">
+                <div class="offset-1 col-5 info d-flex align-items-center">
                     <div class="">
                         <p>Let's work <u class="under">together</u>.</p>
                     </div>
                 </div>
-                <div class="line col-1"></div>
+                <!-- <div class="line col-1"></div> -->
                 <div class="offset-1 col-4 subject d-flex align-items-center thats-me-container">
                     <div class="d-flex flex-column">
                         <p><u class="under">E-mail</u>:<br> ricardoriguba@gmail.com</p>
@@ -163,8 +163,8 @@
                 </div>
             </div>
             <div class="row show-small h-100">
-                <div class="offset-1 col-11 offset-md-2 col-md-10 d-flex flex-column priority info copy">
-                    <div class="d-flex flex-column justify-content-end">
+                <div class="offset-1 col-11 offset-md-2 col-md-10 d-flex priority info copy">
+                    <div class="d-flex flex-column justify-content-center h-100">
                         <p><u class="under">E-mail</u>:<br> ricardoriguba@gmail.com</p>
                         <p><u class="under">Phone</u>:<br> +351 969070134</p>
                         <p><u class="under">Instagram</u>:<br> @bonanca.rgb</p>
