--- a/aniversario_atomico.html
+++ b/aniversario_atomico.html
@@ -166,25 +166,25 @@
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cartaz_a3_aniversario_atomico_FINAL.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Full poster for the event.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/bonanca_aniversario_atomico.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Artist lineup post.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/sogranora_aniversario_atomico.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Artist lineup post.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/passatempo_atoms_1.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Other social media posts.</p>
                                 </div>
                             </div>
                         </div>
@@ -240,25 +240,25 @@
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cartaz_a3_aniversario_atomico_FINAL.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Full poster for the event.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/bonanca_aniversario_atomico.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Artist lineup post.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/sogranora_aniversario_atomico.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Artist lineup post.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/passatempo_atoms_1.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Other social media posts.</p>
                                 </div>
                             </div>
                         </div>
