--- a/roterdao.html
+++ b/roterdao.html
@@ -165,7 +165,7 @@
                         <div class="project-carousel px-0">
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_roterdao.svg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>Logo reimagining.</p></div>
+                                <div class="pt-3 slide-description"><p>New logo.</p></div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_comparison.svg" class="img-fluid">
@@ -240,7 +240,7 @@
                         <div class="project-carousel d-flex justify-content-center row px-0">
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_roterdao.svg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>Logo reimagining.</p></div>
+                                <div class="pt-3 slide-description"><p>New logo.</p></div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_comparison.svg" class="img-fluid">
