--- a/seixal_terno.html
+++ b/seixal_terno.html
@@ -180,13 +180,13 @@
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex row px-0">
                             <div class="slide d-flex flex-column px-3">
-                                <video src="images/seixal_maos_movel.mp4" muted autoplay loop class="img-fluid"></video>
+                                <img src="images/seixal_poster_mockup_insta.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                  <p>Performance panflet.</p>
+                                  <p>Physical version mockup.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
-                                <img src="images/seixal_poster_mockup_insta.jpg" class="img-fluid">
+                                <video src="images/seixal_maos_movel.mp4" muted autoplay loop class="img-fluid"></video>
                                 <div class="pt-3 slide-description">
                                   <p>Performance panflet.</p>
                                 </div>
@@ -194,13 +194,13 @@
                             <div class="slide d-flex flex-column px-3">
                                 <video src="images/seixal_movel_vermelho.mp4" muted autoplay loop class="img-fluid"></video>
                                 <div class="pt-3 slide-description">
-                                  <p>Performance panflet.</p>
+                                  <p>Artist lineup posts.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <video src="images/seixal_pc_maos.mp4" muted autoplay loop class="img-fluid"></video>
                                 <div class="pt-3 slide-description">
-                                  <p>Performance panflet.</p>
+                                  <p>Other social media post formats</p>
                                 </div>
                             </div>
                         </div>
@@ -255,13 +255,13 @@
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex justify-content-center row px-0">
                             <div class="slide d-flex flex-column px-3">
-                                <video src="images/seixal_maos_movel.mp4" muted autoplay loop class="img-fluid"></video>
+                                <img src="images/seixal_poster_mockup_insta.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                  <p>Performance panflet.</p>
+                                  <p>Physical version mockup.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
-                                <img src="images/seixal_poster_mockup_insta.jpg" class="img-fluid">
+                                <video src="images/seixal_maos_movel.mp4" muted autoplay loop class="img-fluid"></video>
                                 <div class="pt-3 slide-description">
                                   <p>Performance panflet.</p>
                                 </div>
@@ -269,13 +269,13 @@
                             <div class="slide d-flex flex-column px-3">
                                 <video src="images/seixal_movel_vermelho.mp4" muted autoplay loop class="img-fluid"></video>
                                 <div class="pt-3 slide-description">
-                                  <p>Performance panflet.</p>
+                                  <p>Artist lineup posts.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <video src="images/seixal_pc_maos.mp4" muted autoplay loop class="img-fluid"></video>
                                 <div class="pt-3 slide-description">
-                                  <p>Performance panflet.</p>
+                                  <p>Other social media post formats</p>
                                 </div>
                             </div>
                         </div>
