final structure adjustments

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                         <p class="titulo mb-0">Roterdão Club</p>
                                     </div>
                                     <div class="tags">
-                                        <p>web design | design | content creation</p>
+                                        <p>brand design | web design | social media design</p>
                                     </div>
                                 </div>                        
                             </a>
